2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-ast.c (pkl_ast_lvalue_p): Rename 'FILE *fd'
	to 'FILE *fp'.
	(pkl_ast_print_1): Likewise.
	(pkl_ast_print): Likewise.
	* libpoke/pkl-ast.h (pkl_ast_print): Likewise.
	* libpoke/pkl-diag.c (pkl_detailed_location): Likewise.
	* libpoke/pkl-parser.c (pkl_parse_file): Likewise.
	* libpoke/pkl-parser.h (pkl_parse_file): Likewise.
	* libpoke/pkl-tab.y (load_module): Likewise.
	* libpoke/pkl.c (pkl_compile_file): Likewise.
	* poke/pk-cmd-editor.c (pk_cmd_editor): Likewise.
	* poke/pk-cmd.c (pk_cmd_exec_script): Likewise.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/pk-mi.c (pk_mi_fd_set_nonblocking): New function.
	(pk_mi_fd_restore_blocking): New function.
	(pk_mi_loop): Set fd to blocking and restore before returning.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.h (pk_map_remove): New prototype.
	* poke/pk-map.c (pk_map_remove): Define.
	(free_map): Likewise.
	* poke/pk-cmd-map.c (pk_cmd_map_remove): Define.
	(map_remove_cmd): Define.
	(map_cmds): Add map_remove_cmd.
	* testsuite/poke.cmd/maps-7.pk: New test.
	* testsuite/poke.cmd/maps-8.pk: Likewise.
	* testsuite/poke.cmd/maps-9.pk: Likewise.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-map.c (map_entry_add_cmd): Rename from map_add_cmd.
	(map_entry_remove_cmd): Rename from map_remove_cmd.
	(map_entry_cmds): Define.
	(map_entry_cmd): Likewise.
	* poke/pk-cmd.c (pk_cmd_init): Initialize map_entry_trie.
	(pk_cmd_shutdown): Free map_entry_trie.
	* testsuite/poke.cmd/maps-4.pk: Adapt.
	* testsuite/poke.cmd/maps-6.pk: Likewise.
	* testsuite/poke.cmd/maps-5.pk: Likewise.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/pk-mi.c (pk_mi_read_from_client): Fix nbytes to ssize_t.
	(pk_mi_dispatch_msg): Fix empty else block.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* pickles/Makefile.am: Add id3v1.pk to dist_pickles_DATA.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>
